--- a/css/scorestyle.css
+++ b/css/scorestyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -13,6 +13,14 @@ body {
     overflow: auto;
     padding: 20px;
     box-sizing: border-box;
+}
+
+.blur-background {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  backdrop-filter: blur(10px); /* Apply blur effect */
+  width: 100%;
+  height: 100vh; /* Full viewport height */
 }
 
 /* Main menu container */
