--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -13,20 +13,47 @@ body {
     overflow: hidden;
 }
 
+.blur-background {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  backdrop-filter: blur(10px); /* Apply blur effect */
+  width: 100%;
+  height: 100vh; /* Full viewport height */
+}
+
 /* Main menu div */
 .midframe {
     width: 50%;
-    min-height: 50%;
+    min-height: 30%;
     height: auto;
     background-color: rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin: 10% auto;
+    margin: 15% auto;
+    margin-top: -9%;
     border-radius: 25px;
     border: double 8px rgb(107, 104, 101);
     padding: 20px;
+    padding-top: 80px;
+    position: relative;
+}
+.titleframe {
+    width: 30%;
+    min-height: 10%;
+    height: auto;
+    /*background-color: rgba(0, 0, 0, 0.8);*/
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 10% auto;
+    border-radius: 25px;
+    /*border: double 8px rgb(107, 104, 101);*/
+    padding: 10px;
+    text-shadow: 5px 5px #000000;
+    text-shadow: 5px 5px 2px black;
     position: relative;
 }
 
@@ -35,8 +62,8 @@ body {
     align-items: center;
     justify-content: center;
     gap: 20px;
-    margin-top: 2%;
-    margin-bottom: 2%;
+    margin-top: 3%;
+    margin-bottom: 1%;
 }
 
 .title-wrapper {
@@ -68,7 +95,7 @@ body {
     margin-top: -10px;
     text-align: center;
     color: rgb(255, 255, 255);
-    font-size: 30px;
+    font-size: 250%;
     font-family: 'Brush Script MT', cursive;
 }
 
@@ -77,7 +104,7 @@ body {
     margin-bottom: 15px;
     text-align: center;
     color: rgb(255, 255, 255);
-    font-size: 300%;
+    font-size: 500%;
     font-family: 'Times New Roman', serif;
 }
 
