--- a/css/userstyle.css
+++ b/css/userstyle.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/bg.jpg');
+    background-image: url('../images/bg.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -11,6 +11,14 @@ body {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+}
+
+.blur-background {
+  position: relative;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  backdrop-filter: blur(10px); /* Apply blur effect */
+  width: 100%;
+  height: 100vh; /* Full viewport height */
 }
 
 /* Main menu div */
